# libre-stonks

./: README.md  biome.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: app-icon.avif  icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: market-holidays.json
src/lib/: Greet.svelte  api.ts  config.ts  data-processing.ts  data.ts  database.ts  db.ts  errors.ts  file-system.ts  notifications.ts  portfolio.ts  stock-market.ts  stronghold.ts  types.ts  use-interval.ts  useFetch.svelte.ts  utils.ts  websocket.ts
src/lib/api/: alpha-vantage.ts  iexcloud.ts  polygon.ts  twelve-data.ts
src/lib/components/: Greet.svelte  Search.svelte  clock.svelte
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/combobox/: combobox.svelte
src/lib/components/ui/command/: command-dialog.svelte  command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  command.svelte
src/lib/stores/: settings.ts  stores.ts
src/mock/: get-data-iex-cloud.json  get-data-twelve-data.json  search-polygon.json  search.json
src/stores/: settings.ts  stores.ts
(+29 files in other folders)
