[package]
name = "libre-stonks"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libre_stocks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["macos-private-api"] }
tauri-plugin-fs = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-notification = "2.0.0-alpha.7"
tauri-plugin-http = "2.0.0-alpha.9"
tauri-plugin-store = "2.0.0-alpha"
tauri-plugin-websocket = "2.0.0-alpha"
tauri-plugin-window-state = "2.0.0-alpha"
serde_json = "1.0.111"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }

[dependencies.tauri-plugin-sql]
features = ["sqlite"]   # or "postgres", or "mysql"
version = "2.0.0-alpha"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
